# Proyecto-Ginecologia

./: main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  main9.py  pyproject.toml  requirements.txt
Proyecto-Ginecologia.git/: config
